--- a/src/Components/ColorPicker/ColorPicker.scss
+++ b/src/Components/ColorPicker/ColorPicker.scss
@@ -1,12 +1,12 @@
-$primaryBg: #191919;
+$primaryBg: #222222;
 $primarytColor: #c2c2c2;
 $borderColor: #111;
 $border: 1px solid $borderColor;
 
 .ColorPicker {
     position: absolute;
-    width: 400px;
-    height: 300px;
+    width: 500px;
+    height: 350px;
     left: 40px;
     top: 40px;
     color: $primarytColor;
@@ -20,6 +20,29 @@ $border: 1px solid $borderColor;
     -o-border-radius: 5px;
     box-shadow: 5px 5px 5px #000;
     z-index: 1;
+    .ColorPicker--button-theme {
+        background: -moz-linear-gradient(top, #1a1a1a 0%, #1a1a1a 10%, #0c0c0c 100%);
+        background: -ms-linear-gradient(top, #1a1a1a 0%, #1a1a1a 10%, #0c0c0c 100%);
+        background: -o-linear-gradient(top, #1a1a1a 0%, #1a1a1a 10%, #0c0c0c 100%);
+        background: -webkit-gradient(linear, top from(#1a1a1a), color-stop(0.1, #1a1a1a), to(#0c0c0c));
+        background: -webkit-linear-gradient(top, #1a1a1a 0%, #1a1a1a 10%, #0c0c0c 100%);
+        background: linear-gradient(to bottom, #1a1a1a 0%, #1a1a1a 10%, #0c0c0c 100%);
+        border-radius: 3px;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        -ms-border-radius: 3px;
+        -o-border-radius: 3px;
+        border: $border;
+        text-shadow: -1px -1px black;
+        &:hover {
+            background: -moz-linear-gradient(bottom, #1a1a1a 0%, #1a1a1a 10%, #0c0c0c 100%);
+            background: -ms-linear-gradient(bottom, #1a1a1a 0%, #1a1a1a 10%, #0c0c0c 100%);
+            background: -o-linear-gradient(bottom, #1a1a1a 0%, #1a1a1a 10%, #0c0c0c 100%);
+            background: -webkit-gradient(linear, bottom from(#1a1a1a), color-stop(0.1, #1a1a1a), to(#0c0c0c));
+            background: -webkit-linear-gradient(bottom, #1a1a1a 0%, #1a1a1a 10%, #0c0c0c 100%);
+            background: linear-gradient(to top, #1a1a1a 0%, #1a1a1a 10%, #0c0c0c 100%);
+        }
+}
 }
 
 .ColorPicker__header {
@@ -28,7 +51,7 @@ $border: 1px solid $borderColor;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    background: rgba(0,0,0, 0.1);
+    background: rgba(0,0,0, 0.2);
     font-size: 18px;
     border-bottom: $border;
     border-radius: 4px 4px 0 0;
@@ -40,9 +63,7 @@ $border: 1px solid $borderColor;
         height: 95%;
         min-width: 30px;
         padding: 0 1px;
-        background: 50% 50%/contain no-repeat transparent;
         color: deeppink;
-        border: none;
         font-size: 18px;
         cursor: pointer;
         &:hover { font-size: 14px; }
@@ -85,17 +106,36 @@ $border: 1px solid $borderColor;
     }
     .ColorPicker__ok-btn-box {
         button {
-            height: 95%;
+            height: 65%;
             min-width: 30px;
-            padding: 0 2px;
-            background: 50% 50%/contain no-repeat transparent;
+            padding: 0 20px;
             color: $primarytColor;
             font-size: 17px;
-            border: none;
             cursor: pointer;
             &:hover { font-size: 14px; }
         }
     }
+}
+
+.ColorPicker__slider-bg {
+    width: 90%;
+    height: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: black;
+    border: $border;
+    border-radius: 12px;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    -ms-border-radius: 12px;
+    -o-border-radius: 12px;
+    background: -moz-linear-gradient(bottom, #111 0%, #1a1a1a 10%, #0c0c0c 100%);
+    background: -ms-linear-gradient(bottom, #111 0%, #1a1a1a 10%, #0c0c0c 100%);
+    background: -o-linear-gradient(bottom, #111 0%, #1a1a1a 10%, #0c0c0c 100%);
+    background: -webkit-gradient(linear, bottom from(#111), color-stop(0.1, #1a1a1a), to(#0c0c0c));
+    background: -webkit-linear-gradient(bottom, #111 0%, #1a1a1a 10%, #0c0c0c 100%);
+    background: linear-gradient(to top, #111 0%, #1a1a1a 10%, #0c0c0c 100%);
 }
 
 .ColorPicker__hue-slider {
@@ -103,15 +143,22 @@ $border: 1px solid $borderColor;
     justify-content: center;
     align-items: center;
     .ColorPicker__hue {
-        width: 90%;
-        height: 15px;
+        position: relative;
+        width: calc(100% - 12px);
+        height: 4px;
+        border: $border;
         background: -moz-linear-gradient(left, #ff0000 0%, #ffff00 17%, #00ff00 33%, #00ffff 50%, #0000ff 67%, #ff00ff 83%, #ff0000 100%);
         background: -ms-linear-gradient(left, #ff0000 0%, #ffff00 17%, #00ff00 33%, #00ffff 50%, #0000ff 67%, #ff00ff 83%, #ff0000 100%);
         background: -o-linear-gradient(left, #ff0000 0%, #ffff00 17%, #00ff00 33%, #00ffff 50%, #0000ff 67%, #ff00ff 83%, #ff0000 100%);
         background: -webkit-gradient(linear, left from(#ff0000), color-stop(0.17, #ffff00), color-stop(0.33, #00ff00), color-stop(0.5, #00ffff), color-stop(0.67, #0000ff), color-stop(0.83, #ff00ff), to(#ff0000));
         background: -webkit-linear-gradient(left, #ff0000 0%, #ffff00 17%, #00ff00 33%, #00ffff 50%, #0000ff 67%, #ff00ff 83%, #ff0000 100%);
         background: linear-gradient(to right, #ff0000 0%, #ffff00 17%, #00ff00 33%, #00ffff 50%, #0000ff 67%, #ff00ff 83%, #ff0000 100%);
-    }
+        border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+}
 }
 
 .ColorPicker__alpha-slider {
@@ -120,17 +167,55 @@ $border: 1px solid $borderColor;
     justify-content: center;
     align-items: center;
     .ColorPicker__alpha-bg {
-        width: 90%;
-        height: 100%;
+        width: calc(100% - 12px);
+        height: 4px;
+        border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+        border: $border;
         .ColorPicker__alpha {
+            position: relative;
             width: 100%;
-            height: 15px;
+            height: 4px;
             background: -moz-linear-gradient(left, #ff0000 0%, transparent 100%);
             background: -ms-linear-gradient(left, #ff0000 0%, transparent 100%);
             background: -o-linear-gradient(left, #ff0000 0%, transparent 100%);
             background: -webkit-gradient(linear, left from(#ff0000), to(#ff0000));
             background: -webkit-linear-gradient(left, #ff0000 0%, transparent 100%);
             background: linear-gradient(to right, #ff0000 0%, transparent 100%);
+            border-radius: 5px;
+            -webkit-border-radius: 5px;
+            -moz-border-radius: 5px;
+            -ms-border-radius: 5px;
+            -o-border-radius: 5px;
         }
+    }
+}
+
+.ColorPicker__slider-thumb {
+    position: absolute;
+    width: 23px;
+    height: 23px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    transform-origin: 50% 50%;
+    -webkit-transform-origin: 50% 50%;
+    transform: translate(-11px, -9.5px);
+    -webkit-transform: translate(-11px, -9.5px);
+    cursor: pointer;
+    .ColorPicker__slider-point {
+        width: 1px;
+        height: 1px;
+        background: white;
+    }
+    &:hover {
+        transform: translate(-11px, -9.5px) rotate(180deg);
+        -webkit-transform: translate(-11px, -9.5px) rotate(180deg);
     }
 }
