--- a/src/Components/ColorPicker/ColorPicker.scss
+++ b/src/Components/ColorPicker/ColorPicker.scss
@@ -158,7 +158,19 @@ $border: 1px solid $borderColor;
         -moz-border-radius: 5px;
         -ms-border-radius: 5px;
         -o-border-radius: 5px;
-}
+        canvas {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            border-radius: 5px;
+            -webkit-border-radius: 5px;
+            -moz-border-radius: 5px;
+            -ms-border-radius: 5px;
+            -o-border-radius: 5px;
+        }
+    }
 }
 
 .ColorPicker__alpha-slider {
@@ -209,11 +221,6 @@ $border: 1px solid $borderColor;
     transform: translate(-11px, -9.5px);
     -webkit-transform: translate(-11px, -9.5px);
     cursor: pointer;
-    .ColorPicker__slider-point {
-        width: 1px;
-        height: 1px;
-        background: white;
-    }
     &:hover {
         transform: translate(-11px, -9.5px) rotate(180deg);
         -webkit-transform: translate(-11px, -9.5px) rotate(180deg);
