--- a/src/Components/ColorPicker/ColorPicker.scss
+++ b/src/Components/ColorPicker/ColorPicker.scss
@@ -49,7 +49,7 @@ $border: 1px solid $borderColor;
     height: 25px;
     width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     background: rgba(0,0,0, 0.2);
     font-size: 18px;
@@ -59,6 +59,38 @@ $border: 1px solid $borderColor;
     -moz-border-radius: 4px 4px 0 0;
     -ms-border-radius: 4px 4px 0 0;
     -o-border-radius: 4px 4px 0 0;
+    .ColorPicker__result-colors {
+        margin: 3px;
+        width: 70px;
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        > div {
+            margin: 0 1px;
+            width: 50%;
+            height: 70%;
+            border: $border;
+            div {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        > div:first-child {
+            border-radius: 4px 0 0 0;
+            -webkit-border-radius: 4px 0 0 0;
+            -moz-border-radius: 4px 0 0 0;
+            -ms-border-radius: 4px 0 0 0;
+            -o-border-radius: 4px 0 0 0;
+            > div {
+                border-radius: 3px 0 0 0;
+                -webkit-border-radius: 3px 0 0 0;
+                -moz-border-radius: 3px 0 0 0;
+                -ms-border-radius: 3px 0 0 0;
+                -o-border-radius: 3px 0 0 0;
+            }
+        }
+    }
     .close-btn {
         height: 95%;
         min-width: 30px;
