--- a/src/Components/ColorPicker/ColorPicker.scss
+++ b/src/Components/ColorPicker/ColorPicker.scss
@@ -112,6 +112,7 @@ $border: 1px solid $borderColor;
     height: 70%;
     display: flex;
     .ColorPicker__palette {
+        position: relative;
         margin: 2% 0 2% 5%;
         width: 55%;
         height: 92%;
@@ -120,6 +121,44 @@ $border: 1px solid $borderColor;
             width: 100%;
             height: 100%;
             cursor: crosshair;
+            z-index: 1;
+        }
+        .ColorPicker__color-palette-cursor {
+            position: absolute;
+            top: -10px;
+            right: -10px;
+            width: 20px;
+            height: 20px;
+            border: 2px solid #222;
+            border-radius: 50%;
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            -ms-border-radius: 50%;
+            -o-border-radius: 50%;
+            z-index: 2;
+            cursor: none;
+            > div {
+                width: calc(100% - 8px);
+                height: calc(100% - 8px);
+                border: 4px solid white;
+                border-radius: 50%;
+                -webkit-border-radius: 50%;
+                -moz-border-radius: 50%;
+                -ms-border-radius: 50%;
+                -o-border-radius: 50%;
+                cursor: none;
+                > div {
+                    width: calc(100% - 2px);
+                    height: calc(100% - 2px);
+                    border: 1px solid black;
+                    border-radius: 50%;
+                    -webkit-border-radius: 50%;
+                    -moz-border-radius: 50%;
+                    -ms-border-radius: 50%;
+                    -o-border-radius: 50%;
+                    cursor: none;
+                }
+            }
         }
     }
     .ColorPicker__text-inputs {
