--- a/src/Components/ColorPicker/ColorPicker.scss
+++ b/src/Components/ColorPicker/ColorPicker.scss
@@ -114,7 +114,7 @@ $border: 1px solid $borderColor;
     .ColorPicker__palette {
         position: relative;
         margin: 2% 0 2% 5%;
-        width: 55%;
+        width: 85%;
         height: 92%;
         border: $border;
         canvas {
@@ -162,16 +162,31 @@ $border: 1px solid $borderColor;
         }
     }
     .ColorPicker__text-inputs {
-        width: 40%;
-        height: 100%;
-        //border: 1px dotted white;
+        width: 25%;
+        height: 92%;
+        margin: 2% 5% 2% 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-end;
+        > div {
+            display: flex;
+            padding-left: 20%;
+            justify-content: space-between;
+            color: white;
+            input {
+                color: black;
+                text-align: center;
+                width: 60%;
+                border: $border;
+            }
+        }
     }
 }
 
 .ColorPicker__lower-box {
     width: 100%;
     height: 30%;
-    //border: 1px dotted white;
     > div {
         width: 100%;
         height: 30%;
@@ -179,7 +194,6 @@ $border: 1px solid $borderColor;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        //border: 1px dotted white;
     }
     > div:last-child { height: 40%; }
     .ColorPicker__ok-btn-box {
