--- a/src/Components/ColorPicker/ColorPicker.scss
+++ b/src/Components/ColorPicker/ColorPicker.scss
@@ -173,9 +173,10 @@ $border: 1px solid $borderColor;
             display: flex;
             padding-left: 20%;
             justify-content: space-between;
-            color: white;
+            color: #c2c2c2;
             input {
-                color: black;
+                background: #1b1b1b;
+                color: #c2c2c2;
                 text-align: center;
                 width: 60%;
                 border: $border;
