rewrite slider events to work on sliders and tumbs too

--- a/src/Components/ColorPicker/ColorPicker.scss
+++ b/src/Components/ColorPicker/ColorPicker.scss
@@ -262,6 +262,8 @@ $border: 1px solid $borderColor;
             -moz-border-radius: 5px;
             -ms-border-radius: 5px;
             -o-border-radius: 5px;
+            cursor: pointer;
+
         }
     }
 }
@@ -295,6 +297,7 @@ $border: 1px solid $borderColor;
             -moz-border-radius: 5px;
             -ms-border-radius: 5px;
             -o-border-radius: 5px;
+            cursor: pointer;
         }
     }
 }
