--- a/src/Components/ColorPicker/ColorPicker.scss
+++ b/src/Components/ColorPicker/ColorPicker.scss
@@ -46,7 +46,7 @@ $border: 1px solid $borderColor;
             background: -webkit-linear-gradient(bottom, #1a1a1a 0%, #1a1a1a 10%, #0c0c0c 100%);
             background: linear-gradient(to top, #1a1a1a 0%, #1a1a1a 10%, #0c0c0c 100%);
         }
-}
+    }
 }
 
 .ColorPicker__header {
@@ -344,12 +344,49 @@ $border: 1px solid $borderColor;
     }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 500px) and (orientation: portrait) {
     .ColorPicker {
         position: absolute;
         left: 1vw !important;
         top: 0.5vh !important;
         width: 98vw;
         height: 99vh;
+    }
+    .ColorPicker__header {
+        height: 4.5vh;
+    }
+    .ColorPicker__upper-box {
+        height: 75%;
+        flex-direction: column;
+        .ColorPicker__palette {
+            width: 90%;
+            height: 75%;
+            margin: 2% 5%;
+        }
+        .ColorPicker__text-inputs {
+            width: 90%;
+            height: 25%;
+            margin: 2% 5%;
+            flex-direction: row;
+            justify-content: center;
+            flex-wrap: wrap;
+            > div, > p {
+                margin: 0 0 0 1.3%;
+                padding: 0;
+                width: 32%;
+            }
+            > p {
+                > span:first-child {
+                    width: 40%;
+                    padding-left: 0;
+                }
+                > span:last-child {
+                    width: 60%;
+                }
+            }
+        }
+    }
+    .ColorPicker__lower-box {
+        height: 20%;
     }
 }
