--- a/src/Components/ColorPicker/ColorPicker.scss
+++ b/src/Components/ColorPicker/ColorPicker.scss
@@ -95,14 +95,47 @@ $border: 1px solid $borderColor;
             }
         }
     }
-    .close-btn {
-        height: 95%;
-        min-width: 30px;
-        padding: 0 1px;
-        color: deeppink;
-        font-size: 18px;
-        cursor: pointer;
-        &:hover { font-size: 14px; }
+    .button-box {
+        display: flex;
+        min-height: 100%;        
+        button {
+            position: relative;
+            padding: 0 1px;
+            min-height: 95%;
+            min-width: 30px;
+            cursor: pointer;
+            div {
+                width: 100%;
+                height: 100%;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: contain;
+            }
+            &:hover { 
+                font-size: 14px;
+                > div:first-child {
+                    transform: scale(0.9);
+                    -webkit-transform: scale(0.9);
+                }
+            }
+            .active-sign {
+                position: absolute;
+                top: 5%;
+                right: 5%;
+                width: 5px;
+                height: 5px;
+                background: #4cc3f1;
+                border-radius: 3px 0 0 0;
+                -webkit-border-radius: 5px;
+                -moz-border-radius: 5px;
+                -ms-border-radius: 5px;
+                -o-border-radius: 5px;
+            }
+        }
+        .close-btn {
+            color: deeppink;
+            font-size: 18px;
+        }
     }
 }
 
