--- a/src/Components/ColorPicker/ColorPicker.scss
+++ b/src/Components/ColorPicker/ColorPicker.scss
@@ -140,8 +140,13 @@ $border: 1px solid $borderColor;
 }
 
 .ColorPicker__body {
+    position: relative;
     width: 100%;
     height: calc(100% - 25px);
+    .ColorPicker__body--palette-mode {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .ColorPicker__upper-box {
@@ -375,6 +380,14 @@ $border: 1px solid $borderColor;
         transform: translate(-11px, -9.5px) rotate(180deg);
         -webkit-transform: translate(-11px, -9.5px) rotate(180deg);
     }
+}
+
+.ColorPicker__body--history-mode, .ColorPicker__body--names-mode {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 @media only screen and (max-width: 500px) and (orientation: portrait) {
