--- a/src/Components/ColorPicker/ColorPicker.scss
+++ b/src/Components/ColorPicker/ColorPicker.scss
@@ -95,6 +95,11 @@ $border: 1px solid $borderColor;
             }
         }
     }
+    .color-code {
+        color: #c2c2c2;
+        font-size: 14px;
+        font-family: monospace;
+    }
     .button-box {
         display: flex;
         min-height: 100%;        
@@ -103,6 +108,8 @@ $border: 1px solid $borderColor;
             padding: 0 1px;
             min-height: 95%;
             min-width: 30px;
+            color: #4cc3f1;
+            font-size: 16px;
             cursor: pointer;
             div {
                 width: 100%;
@@ -399,10 +406,18 @@ $border: 1px solid $borderColor;
         height: 99vh;
     }
     .ColorPicker__header {
-        height: 4.5vh;
+        height: 8.5vh;
+        flex-wrap: wrap;
+        > div {max-height: 50%;}
+        .color-code {
+            order: 3;
+            flex-grow: 2;
+            text-align: center;
+        }
+        .button-box {min-height: 50%;}
     }
     .ColorPicker__upper-box {
-        height: 75%;
+        height: 70%;
         flex-direction: column;
         .ColorPicker__palette {
             width: 90%;
@@ -416,6 +431,15 @@ $border: 1px solid $borderColor;
             flex-direction: row;
             justify-content: center;
             flex-wrap: wrap;
+            > div:nth-child(1) {  order: 0; }
+            > div:nth-child(2) {  order: 1; }
+            > div:nth-child(3) {  order: 2; }
+            > div:nth-child(4) {  order: 6; }
+            > div:nth-child(5) {  order: 3; }
+            > div:nth-child(6) {  order: 4; }
+            > div:nth-child(7) {  order: 5; }
+            > div:nth-child(8) {  order: 7; }
+            > p {  order: 8; }
             > div, > p {
                 margin: 0 0 0 1.3%;
                 padding: 0;
