switch and display color formats

--- a/src/Components/ColorPicker/ColorPicker.scss
+++ b/src/Components/ColorPicker/ColorPicker.scss
@@ -96,7 +96,7 @@ $border: 1px solid $borderColor;
         }
     }
     .color-code {
-        color: #c2c2c2;
+        color: #555f64;
         font-size: 14px;
         font-family: monospace;
     }
