--- a/src/Components/ColorPicker/ColorPicker.scss
+++ b/src/Components/ColorPicker/ColorPicker.scss
@@ -395,6 +395,31 @@ $border: 1px solid $borderColor;
     left: 0;
     width: 100%;
     height: 100%;
+    background-color: $primaryBg;
+    z-index: 3;
+}
+
+.ColorPicker__body--names-mode {
+    overflow: auto;
+    .ColorPicker__color-names {
+        width: 100%;
+        height: 5%;
+        .ColorPicker__color-name {
+            display: flex;
+            .ColorPicker__color-name__sample {
+                width: 50%;
+            }
+            .ColorPicker__color-name__name {
+                width: 35%;
+                padding-left: 10px;
+                text-align: left;
+            }
+            .ColorPicker__color-name__hex {
+                width: 15%;
+                text-align: center;
+            }
+        }
+    }
 }
 
 @media only screen and (max-width: 500px) and (orientation: portrait) {
