--- a/src/Components/ColorPicker/ColorPicker.scss
+++ b/src/Components/ColorPicker/ColorPicker.scss
@@ -141,6 +141,7 @@ $border: 1px solid $borderColor;
         }
         .close-btn {
             color: deeppink;
+            font-weight: bold;
             font-size: 18px;
         }
     }
@@ -401,6 +402,24 @@ $border: 1px solid $borderColor;
 
 .ColorPicker__body--names-mode {
     overflow: auto;
+    font-weight: normal;
+    .ColorPicker__color-names__header {
+        height: 7%;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        button {
+            width: 16.6%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-grow: 1;
+            height: 100%;
+            color: #aadae9;
+            font-size: 16px;
+            &:hover { font-size: 14px; }
+        }
+    }
     .ColorPicker__color-names {
         width: 100%;
         height: 5%;
