--- a/src/Components/ColorPicker/ColorPicker.scss
+++ b/src/Components/ColorPicker/ColorPicker.scss
@@ -439,21 +439,17 @@ $border: 1px solid $borderColor;
         height: 5%;
         .ColorPicker__color-name {
             display: flex;
-            &:hover { .ColorPicker__color-name__name, .ColorPicker__color-name__hex { background-color: rgba(255, 255, 255, 0.05); }}
-            .ColorPicker__color-name__sample { width: 50%; }
-            .ColorPicker__color-name__name {
+            &:hover { .ColorPicker__color-name__hex { background-color: rgba(255, 255, 255, 0.05); }}
+            .ColorPicker__color-name__sample {
+                width: 70%;
                 display: flex;
                 justify-content: space-between;
-                width: 35%;
-                padding-left: 10px;
+                padding: 0 10px;
                 text-align: left;
-                span {
-                    color: #555f64;
-                    font-style: italic;
-                }
+                span { font-style: italic; }
             }
             .ColorPicker__color-name__hex {
-                width: 15%;
+                width: 30%;
                 text-align: center;
             }
         }
