--- a/src/Components/ColorPicker/ColorPicker.scss
+++ b/src/Components/ColorPicker/ColorPicker.scss
@@ -454,6 +454,16 @@ $border: 1px solid $borderColor;
             }
         }
     }
+    table {border-collapse: collapse;}
+    .ColorPicker__color-row {
+        width: 100%;
+        td {
+            width: 10%;
+            height: 20px;
+            text-align: center;
+            font-size: 12px;
+        }
+    }
 }
 
 @media only screen and (max-width: 500px) and (orientation: portrait) {
