--- a/src/Components/ColorPicker/ColorPicker.scss
+++ b/src/Components/ColorPicker/ColorPicker.scss
@@ -466,6 +466,10 @@ $border: 1px solid $borderColor;
     }
 }
 
+.ColorPicker__body--history-mode {
+    display: flex;
+}
+
 @media only screen and (max-width: 500px) and (orientation: portrait) {
     .ColorPicker {
         position: absolute;
