--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,7 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: content-box;
+    box-sizing: border-box;
     font-family: "Abel";
     outline: none;
 }
@@ -14,6 +14,7 @@
 .App {
     width: 100vw;
     height: 100vh;
+    padding: 10px;
     background: #202020;
     font-weight: bold;
     & > button {
