--- a/src/Components/ResultDisplay/ResultDisplay.scss
+++ b/src/Components/ResultDisplay/ResultDisplay.scss
@@ -4,11 +4,44 @@ $borderColor: #111;
 $border: 1px solid $borderColor;
 
 .ResultDisplay {
-    width: 70%;
+    width: 50%;
     height: 50%;
-    border: $border;
+    display: flex;
+    flex-direction: column;
+    .ResultDisplay__header {
+        width: 100%;
+        height: 7%;
+        display: flex;
+        justify-content: space-between;
+        font-size: 18px;
+        color: $primarytColor;
+        padding: 1px;
+        .ResultDisplay__menu-btn {
+            width: 5%;
+            height: 100%;
+            border: none;
+            background: transparent;
+            color: $primarytColor;
+            font-size: 18px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            text-align: right;
+            &:hover {
+                font-size: 16px;
+            }
+        }
+    }
     .ResultDisplay__checkered-bg, .ResultDisplay__color-bg {
         width: 100%;
-        height: 100%;
+        border: $border;
+    }
+    .ResultDisplay__checkered-bg { height: 93%; }
+    .ResultDisplay__color-bg { height: 100%; }
+}
+
+@media only screen and (max-width: 500px) and (orientation: portrait) {
+    .ResultDisplay {
+        width: 100%;
     }
 }
