--- a/src/Components/ResultDisplay/ResultDisplay.scss
+++ b/src/Components/ResultDisplay/ResultDisplay.scss
@@ -15,7 +15,9 @@ $border: 1px solid $borderColor;
         justify-content: space-between;
         font-size: 18px;
         color: $primarytColor;
-        padding: 1px;
+        padding: 0 2px;
+        border-top: 1px solid #888;
+        cursor: default;
         .ResultDisplay__menu-btn {
             width: 5%;
             height: 100%;
@@ -24,22 +26,23 @@ $border: 1px solid $borderColor;
             color: $primarytColor;
             font-size: 18px;
             display: flex;
-            flex-direction: column;
-            justify-content: space-around;
+            justify-content: flex-end;
+            align-items: center;
             text-align: right;
+            cursor: pointer;
             &:hover {
-                font-size: 16px;
+                font-size: 14px;
             }
         }
     }
     .ResultDisplay__checkered-bg, .ResultDisplay__color-bg {
         width: 100%;
-        border: $border;
     }
     .ResultDisplay__checkered-bg { height: 93%; }
     .ResultDisplay__color-bg { 
         position: relative;
         height: 100%;
+        border: $border;
     }
 }
 
