--- a/src/App.scss
+++ b/src/App.scss
@@ -13,11 +13,17 @@
 }
 
 .App {
-    width: 100vw;
+    min-width: 100vw;
     height: 100vh;
+    display: flex;
+    flex-flow: column wrap;
     padding: 10px;
     background: #202020;
     font-weight: bold;
+    overflow-x: hidden;
+    & > * {
+        flex: 1 1 50%;
+    }
     & > button {
         position: absolute;
         top: 50%;
@@ -27,5 +33,28 @@
         background: #e5e5e5;
         border-radius: 2px;
         cursor: pointer;
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+    .App {
+        overflow: auto;
+        flex-flow: row wrap;
+        & > * {
+            min-width: 100%;
+            flex: 1;
+            margin: 5px 0;
+        }
+        .ResultDisplay {
+            order: 1;
+        }
+        .GradientList {
+            height: 50%;
+            order: 2;
+            margin-left: 0;
+        }
+        .Code {
+            order: 3;
+        }
     }
 }
