--- a/src/App.scss
+++ b/src/App.scss
@@ -12,17 +12,33 @@
     font-weight: normal;
 }
 
+$primarytColor: #c2c2c2;
+
 .App {
     min-width: 100vw;
     height: 100vh;
     display: flex;
     flex-flow: column wrap;
+    justify-content: space-between;
     padding: 10px;
     background: #202020;
     font-weight: bold;
     overflow-x: hidden;
+    > div > header {
+        width: 100%;
+        height: 30px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 18px;
+        color: $primarytColor;
+        padding: 0 5px;
+        border-bottom: 1px solid #888;
+        cursor: default;
+    }
     & > * {
         flex: 1 1 50%;
+        border: 1px solid #888;
     }
     & > button {
         position: absolute;
