--- a/src/Components/GradientField/GradientField.scss
+++ b/src/Components/GradientField/GradientField.scss
@@ -65,7 +65,20 @@ $primarytColor: #c2c2c2;
         }
     }
     .GradientField__body {
-        width: 70px;
-        height: 100%;
+        max-height: 70px;
+        width: 100%;
+        display: flex;
+        .GradientField__preview {
+            width: 70px;
+            height: 70px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            div {
+                width: 50px;
+                height: 50px;
+                border: 1px solid #ddd;
+            }
+        }
     }
 }
