--- a/src/Components/GradientField/GradientField.scss
+++ b/src/Components/GradientField/GradientField.scss
@@ -44,6 +44,7 @@ $primarytColor: #c2c2c2;
             height: 100%;
             display: flex;
             button {
+                position: relative;
                 height: 100%;
                 width: 25px;
                 display: flex;
@@ -56,6 +57,11 @@ $primarytColor: #c2c2c2;
                 line-height: 22px;
                 vertical-align: middle;
                 cursor: pointer;
+                & > div {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;              
+                }
                 &:hover {
                     color: lightblue;
                     font-size: 18px;
