GradientFields can be added and deleted with confirmation

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,6 +27,7 @@ $primarytColor: #c2c2c2;
     > div > header {
         width: 100%;
         height: 30px;
+        max-height: 30px;
         display: flex;
         justify-content: space-between;
         align-items: center;
