render thumbs if non repeating grad

--- a/src/Components/GradientSlider/GradientSlider.scss
+++ b/src/Components/GradientSlider/GradientSlider.scss
@@ -15,7 +15,11 @@
             display: flex;
         }
         .GradientSlider__thumbs-box {
+            position: relative;
             height: 33.3%;
+            > div {
+                position: absolute;
+            }
         }
     }
     .GradientSlider__btn-box {
