--- a/src/Components/GradientSlider/GradientSlider.scss
+++ b/src/Components/GradientSlider/GradientSlider.scss
@@ -19,6 +19,10 @@
             height: 33.3%;
             > div {
                 position: absolute;
+                bottom: 0;
+                width: 15px;
+                height: 15px;
+                border: 1px solid #ddd;
             }
         }
     }
