--- a/src/Components/GradientField/GradientField.scss
+++ b/src/Components/GradientField/GradientField.scss
@@ -83,6 +83,7 @@ $primarytColor: #c2c2c2;
                 width: 50px;
                 height: 50px;
                 border: 1px solid #ddd;
+                cursor: pointer;
             }
         }
         .GradientField__settings {
