--- a/src/Components/GradientSlider/GradientSlider.scss
+++ b/src/Components/GradientSlider/GradientSlider.scss
@@ -1,14 +1,28 @@
 .GradientSlider {
     position: relative;
     width: 100%;
-    padding: 0 0 0 10px;
+    padding: 0 0 0 20px;
     display: flex;
     .GradientSlider__ruler {
         display: flex;
         flex-direction: column;
         width: calc(100% - 50px);
-        .GradientSlider__text-box {
+        .GradientSlider__measure-text-box {
+            position: relative;
             height: 33.3%;
+            span {
+                position: absolute;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100%;
+                width: 40px;
+                background: black;
+                font-size: 10px;
+                border: 1px solid rgba(221, 221, 221, 0.2);
+                border-bottom: 1px solid rgba(221, 221, 221, 0.5);
+                cursor: default;
+            }
         }
         .GradientSlider__ruler-box {
             height: 33.3%;
@@ -23,6 +37,11 @@
                 width: 15px;
                 height: 15px;
                 border: 1px solid #ddd;
+                cursor: pointer;
+                svg { 
+                    position: absolute; 
+                    top: -14px;
+                }
             }
         }
     }
@@ -30,7 +49,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        margin-left: 10px;
+        margin-left: 20px;
         width: 50px;
         height: 100%;
         border-left: 1px solid rgba(221, 221, 221, 0.1);
@@ -40,6 +59,7 @@
             background: transparent;
             color: #ddd;
             font-size: 16px;
+            cursor: pointer;
             &:first-child { border-bottom: 1px solid rgba(221, 221, 221, 0.1); }
             &:hover {
                 background: rgba(255, 255, 255, 0.1);
