--- a/src/Components/GradientSlider/GradientSlider.scss
+++ b/src/Components/GradientSlider/GradientSlider.scss
@@ -4,9 +4,20 @@
     padding: 0 0 0 20px;
     display: flex;
     .GradientSlider__ruler {
+        position: relative;
         display: flex;
         flex-direction: column;
         width: calc(100% - 50px);
+        .GradientSlider__helper-lines {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: calc(100% - 1px);
+            height: 100%;
+            margin: 0.5px;
+            background: transparent;
+            svg { position: absolute; }
+        }
         .GradientSlider__measure-text-box {
             position: relative;
             height: 33.3%;
@@ -17,10 +28,11 @@
                 align-items: center;
                 height: 100%;
                 width: 40px;
-                background: black;
+                background: #111;
                 font-size: 10px;
                 border: 1px solid rgba(221, 221, 221, 0.2);
                 border-bottom: 1px solid rgba(221, 221, 221, 0.5);
+                border-top: none;
                 cursor: default;
             }
         }
