--- a/src/Components/GradientSlider/GradientSlider.scss
+++ b/src/Components/GradientSlider/GradientSlider.scss
@@ -16,6 +16,7 @@
             height: 100%;
             margin: 0.5px;
             background: transparent;
+            pointer-events: none;
             svg { position: absolute; }
         }
         .GradientSlider__measure-text-box {
@@ -48,7 +49,6 @@
                 bottom: 0;
                 width: 15px;
                 height: 15px;
-                border: 1px solid #ddd;
                 cursor: pointer;
                 svg { 
                     position: absolute; 
