--- a/src/App.scss
+++ b/src/App.scss
@@ -10,11 +10,13 @@
     font-family: "Abel";
     outline: none;
     font-weight: normal;
+    user-select: none;
 }
 
 $primarytColor: #c2c2c2;
 
 .App {
+    position: relative;
     min-width: 100vw;
     height: 100vh;
     display: flex;
@@ -57,7 +59,8 @@ $primarytColor: #c2c2c2;
     .App {
         overflow: auto;
         flex-flow: row wrap;
-        & > * {
+        padding: 0;
+        & > *:not(.ColorPicker) {
             min-width: 100%;
             flex: 1;
             margin: 5px 0;
@@ -74,4 +77,8 @@ $primarytColor: #c2c2c2;
             order: 3;
         }
     }
+}
+
+@media only screen and (max-width: 500px) {
+    .App .ColorPicker { max-width: 100%; }
 }
