--- a/src/Components/ColorPicker/ColorPicker.scss
+++ b/src/Components/ColorPicker/ColorPicker.scss
@@ -102,7 +102,7 @@ $border: 1px solid $borderColor;
     }
     .button-box {
         display: flex;
-        min-height: 100%;        
+        height: 100%;        
         button {
             position: relative;
             padding: 0 1px;
