--- a/src/Components/GradientSlider/GradientSlider.scss
+++ b/src/Components/GradientSlider/GradientSlider.scss
@@ -106,6 +106,7 @@ $activeBtnBg: #4cc3f1;
         height: 100%;
         border-left: 1px solid rgba(221, 221, 221, 0.1);
         button {
+            position: relative;
             height: 100%;
             border: none;
             background: transparent;
