rewrite filterIdenticalColorPercentages function to prioritise active thumb index

--- a/src/Components/GradientSlider/GradientSlider.scss
+++ b/src/Components/GradientSlider/GradientSlider.scss
@@ -62,7 +62,7 @@ $activeBtnBg: #4cc3f1;
         .GradientSlider__measure-text-box {
             position: relative;
             height: 33.3%;
-            span {
+            & > div {
                 position: absolute;
                 display: flex;
                 justify-content: center;
