--- a/src/Components/GradientButtons/GradientButtons.scss
+++ b/src/Components/GradientButtons/GradientButtons.scss
@@ -56,12 +56,14 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
         }
         &:nth-child(4) {
             width: 10%;
+            display: flex;
+            flex-direction: column;
             button {
                 width: 100%;
                 height: 100%;
                 border-left: $border;
                 font-size: 25px;
-                &:hover { font-size: 16px; }
+                &:hover { font-size: 20px; }
             }
         }
         &:nth-child(5) {
@@ -73,7 +75,7 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
                 border-right: $border;
                 font-size: 25px;
                 font-weight: lighter;
-                &:hover { font-size: 16px; }
+                &:hover { font-size: 20px; }
             }
         }
         &:nth-child(6) {
