--- a/src/Components/GradientButtons/GradientButtons.scss
+++ b/src/Components/GradientButtons/GradientButtons.scss
@@ -6,6 +6,7 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
     display: flex;
     height: 40%;
     button {
+        position: relative;
         border: none;
         background: transparent;
         color: $primarytColor;
@@ -17,6 +18,17 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
             color: $activeBtnBg;
             font-size: 16px;
         }
+        & > div {
+            position: absolute;
+            width: 6px;
+            height: 6px;
+            top: 3px;
+            right: 3px;
+            border-radius: 5px;
+            border: 1px solid rgba(221, 221, 221, 0.2);
+        }
+        .btn--active { background: $activeBtnBg; }
+        .btn--inactive { background: rgba(0, 0, 0, 0.7); }
     }
     & > div {
         height: 100%;
