--- a/src/App.scss
+++ b/src/App.scss
@@ -60,6 +60,9 @@ $primarytColor: #c2c2c2;
         overflow: auto;
         flex-flow: row wrap;
         padding: 0;
+        > div {
+            width: 100%;
+        }
         & > *:not(.ColorPicker) {
             min-width: 100%;
             flex: 1;
