--- a/src/Components/DeleteConfirmMsg/DeleteConfirmMsg.scss
+++ b/src/Components/DeleteConfirmMsg/DeleteConfirmMsg.scss
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     background: rgba(0, 0, 0, 0.7);
+    z-index: 2000;
     > div {
         display: flex;
         justify-content: space-evenly;
