--- a/src/Components/GradientButtons/GradientButtons.scss
+++ b/src/Components/GradientButtons/GradientButtons.scss
@@ -32,7 +32,7 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
     }
     & > div {
         height: 100%;
-        width: 15%;
+        width: 13%;
         display: flex;
         &:first-child {
             flex-direction: column;
@@ -97,7 +97,7 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
             justify-content: center;
             align-items: center;
             input {
-                width: 40%;
+                margin: 0 15px;
                 height: 50%;
                 max-width: 40px;
                 background: #131313;
