--- a/src/Components/GradientSlider/GradientSlider.scss
+++ b/src/Components/GradientSlider/GradientSlider.scss
@@ -1,15 +1,16 @@
 .GradientSlider {
     position: relative;
     width: 100%;
-    height: 55%;
+    min-height: 55%;
+    max-height: 55%;
     display: flex;
     border-bottom: 1px solid rgba(221, 221, 221, 0.1);
     .GradientSlider__slider {
-        padding: 0 20px;
+        width: 100%;
         position: relative;
         display: flex;
         flex-direction: column;
-        width: calc(100% - 50px);
+        width: calc(100% - 70px);
         cursor: pointer;
     }
 }
