--- a/src/Components/GradientSlider/GradientSlider.scss
+++ b/src/Components/GradientSlider/GradientSlider.scss
@@ -6,11 +6,16 @@
     display: flex;
     border-bottom: 1px solid rgba(221, 221, 221, 0.1);
     .GradientSlider__slider {
-        width: 100%;
         position: relative;
         display: flex;
         flex-direction: column;
         width: calc(100% - 70px);
         cursor: pointer;
+        .GradientSlider__colorstops-and-colorhints {
+            position: relative;
+            width: calc(100% - 40px);
+            height: 100%;
+            margin: 0 20px;
+        }
     }
 }
