input on ColorStop is validated and functional

--- a/src/Components/ColorStop/ColorStop.scss
+++ b/src/Components/ColorStop/ColorStop.scss
@@ -22,6 +22,7 @@
             height: 100%;
             border: none;
             background: transparent;
+            box-shadow: none;
             color: #ddd;
             text-align: center;
             font-size: inherit;
