--- a/src/App.scss
+++ b/src/App.scss
@@ -60,7 +60,9 @@ $primarytColor: #c2c2c2;
         left: 0;
         width: 100%;
         height: 100%;
-        background: red;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         z-index: 1001;
     }
 }
